# BetterAltTab_Unnamed10110

./: .gitignore  BetterAltTab.ini  CMakeLists.txt  FILTERING_FEATURES.md  PERFORMANCE_OPTIMIZATION.md  README.md  appicon.rc  build.bat  build_direct.bat  build_simple.bat  main.cpp
Release/: BetterAltTab.ini
x64/Release/ALL_BUILD/: ALL_BUILD.recipe
